@@ -1,6 +1,7 @@
 package com.tyse.pipeline.util;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 
@@ -13,22 +14,20 @@ public class CommandLineExecutionUtil {
 
 	}
 
-	public static Byte executeCommand(String command, Dmp dmp) {
+	public static Byte executeCommandImp(String command, Dmp dmp) {
 		try {
-			// Ejecutar el comando
 			ProcessBuilder processBuilder = new ProcessBuilder(command.split(" "));
 			processBuilder.redirectErrorStream(true);
 			Process process = processBuilder.start();
 
-			// Leer la salida del comando
 			BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
 			String line;
 			StringBuilder response = new StringBuilder();
 			while ((line = reader.readLine()) != null) {
 				response.append(line).append("\n");
+				System.out.println(line);
 			}
 
-			// Esperar a que termine la ejecución del comando
 			int exitCode = process.waitFor();
 			response.append("Comando ejecutado con código de salida: " + exitCode);
 			dmp.setResultImport(response.toString());
@@ -39,27 +38,47 @@ public class CommandLineExecutionUtil {
 		}
 	}
 	
-	public static String executeCommand(String command) {
+	public static Byte executeCommand(String command, String homeDirectory) {
 		try {
-			// Ejecutar el comando
-			String[] cmdArray = { command };
-			Process process = Runtime.getRuntime().exec(cmdArray);
-
-			// Leer la salida del comando
+			System.out.println(command);
+			ProcessBuilder processBuilder = new ProcessBuilder(command.split(" "));
+			processBuilder.redirectErrorStream(true);
+			processBuilder.directory(new File(homeDirectory));
+			Process process = processBuilder.start();
 			BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
 			String line;
-			StringBuilder response = new StringBuilder();
 			while ((line = reader.readLine()) != null) {
-				response.append(line).append("\n");
+				System.out.println(line);
 			}
 
-			// Esperar a que termine la ejecución del comando
 			int exitCode = process.waitFor();
-			response.append("Comando ejecutado con código de salida: " + exitCode);
-			return response.toString();
+			return (byte) exitCode;
 		} catch (IOException | InterruptedException e) {
 			e.printStackTrace();
-			return e.getMessage();
+			throw new ExecuteCommandException(e.getMessage(), e.getCause(), true, true);
+		}
+	}
+	
+	public static Byte executeCommand(String[] command, String homeDirectory) {
+		try {
+			for (String string : command) {
+				System.out.println(string + " ");
+			}
+			ProcessBuilder processBuilder = new ProcessBuilder(command);
+			processBuilder.redirectErrorStream(true);
+			processBuilder.directory(new File(homeDirectory));
+			Process process = processBuilder.start();
+			BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+			String line;
+			while ((line = reader.readLine()) != null) {
+				System.out.println(line);
+			}
+
+			int exitCode = process.waitFor();
+			return (byte) exitCode;
+		} catch (IOException | InterruptedException e) {
+			e.printStackTrace();
+			throw new ExecuteCommandException(e.getMessage(), e.getCause(), true, true);
 		}
 	}
 }
